add section blog, section map, footer

--- a/index.html
+++ b/index.html
@@ -795,8 +795,8 @@
     </section>
     <footer class="footer">
       <div class="container">
-        <div class="footer__content col-12">
-          <div class="footer__items col-xl-4">
+        <div class="footer__content">
+          <div class="footer__items">
             <img src="./img/footer-logo.png" alt="MoGo" />
             <p class="footer__text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -821,7 +821,7 @@
               <button class="footer__btn" type="submit">subscribe</button>
             </form>
           </div>
-          <div class="footer__blogs col-xl-4">
+          <div class="footer__blogs">
             <h6>blogs</h6>
             <div class="footer__blogs__item">
               <div class="footer__blogs__logo">
@@ -863,301 +863,59 @@
               </div>
             </div>
           </div>
-          <div class="footer__instagram col-xl-3">
+          <div class="footer__instagram">
             <h6>instagram</h6>
             <div class="footer__instagram__items">
-              <div><img src="./img/footer-logo4.png" alt="MoGo_insta" /></div>
-              <div><img src="./img/footer-logo5.png" alt="MoGo_insta" /></div>
-              <div><img src="./img/footer-logo6.png" alt="MoGo_insta" /></div>
-              <div><img src="./img/footer-logo7.png" alt="MoGo_insta" /></div>
-              <div><img src="./img/footer-logo8.png" alt="MoGo_insta" /></div>
-              <div><img src="./img/footer-logo9.png" alt="MoGo_insta" /></div>
-              <div><img src="./img/footer-logo10.png" alt="MoGo_insta" /></div>
-              <div><img src="./img/footer-logo11.png" alt="MoGo_insta" /></div>
-              <div><img src="./img/footer-logo12.png" alt="MoGo_insta" /></div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo4.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo5.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo6.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo7.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo8.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo9.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo10.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo11.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo">
+                <img src="./img/footer-logo12.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo active">
+                <img src="./img/footer-logo13.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo active">
+                <img src="./img/footer-logo14.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo active">
+                <img src="./img/footer-logo15.png" alt="MoGo_insta" />
+              </div>
+              <div class="footer__inst__logo active">
+                <img src="./img/footer-logo16.png" alt="MoGo_insta" />
+              </div>
+            </div>
+            <div class="footer__viewMore">
+              <a href="##">View more photos</a>
             </div>
           </div>
+        </div>
+        <div class="footer__date">
+          <p class="footer__date__MoGo">©<span id="date">2020</span>MoGo</p>
         </div>
       </div>
     </footer>
-    <!-- <section class="filter">
-      <div class="container">
-        <div class="filter__title">
-          <h6>Welcome to</h6>
-          <h2>OUR SEVICES</h2>
-        </div>
-        <div class="filter__wrapper row">
-          <div class="tabs__btns col-lg-12 offset-xl-1 col-xl-10">
-            <div class="tabs__btn active">All</div>
-            <div class="tabs__btn">Logo</div>
-            <div class="tabs__btn">Branding</div>
-            <div class="tabs__btn">Wordpress</div>
-            <div class="tabs__btn">Web design</div>
-            <div class="tabs__btn">Ui/ix</div>
-            <div class="tabs__btn">Mobile app</div>
-          </div>
-          <div class="tabs__cards">
-            <div class="tabs__card active vis" data-category="logo">
-              <a data-fancybox="gallery" href="./img/filter-logo1.png"
-                ><img src="./img/filter-logo1.png"
-              /></a>
-            </div>
-            <div class="tabs__card active vis" data-category="branding">
-              <a data-fancybox="gallery" href="./img/filter-logo2.png"
-                ><img src="./img/filter-logo2.png"
-              /></a>
-            </div>
-            <div class="tabs__card active vis" data-category="wordpress">
-              <a data-fancybox="gallery" href="./img/filter-logo3.png"
-                ><img src="./img/filter-logo3.png"
-              /></a>
-            </div>
-            <div class="tabs__card active vis" data-category="logo">
-              <a data-fancybox="gallery" href="./img/filter-logo4.png"
-                ><img src="./img/filter-logo4.png"
-              /></a>
-            </div>
-            <div class="tabs__card active vis" data-category="branding">
-              <a data-fancybox="gallery" href="./img/filter-logo6.png"
-                ><img src="./img/filter-logo6.png"
-              /></a>
-            </div>
-            <div class="tabs__card active vis" data-category="web design">
-              <a data-fancybox="gallery" href="./img/filter-logo7.png"
-                ><img src="./img/filter-logo7.png"
-              /></a>
-            </div>
-            <div class="tabs__card active vis" data-category="ui/ix">
-              <a data-fancybox="gallery" href="./img/filter-logo8.png"
-                ><img src="./img/filter-logo8.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="wordpress">
-              <a data-fancybox="gallery" href="./img/filter-logo5.png"
-                ><img src="./img/filter-logo5.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="branding">
-              <a data-fancybox="gallery" href="./img/filter-logo9.png"
-                ><img src="./img/filter-logo9.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="logo">
-              <a data-fancybox="gallery" href="./img/filter-logo10.png"
-                ><img src="./img/filter-logo10.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="web design">
-              <a data-fancybox="gallery" href="./img/filter-logo11.png"
-                ><img src="./img/filter-logo11.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="wordpress">
-              <a data-fancybox="gallery" href="./img/filter-logo12.png"
-                ><img src="./img/filter-logo12.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="branding">
-              <a data-fancybox="gallery" href="./img/filter-logo13.png"
-                ><img src="./img/filter-logo13.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="logo">
-              <a data-fancybox="gallery" href="./img/filter-logo14.png"
-                ><img src="./img/filter-logo14.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="ui/ix">
-              <a data-fancybox="gallery" href="./img/filter-logo15.png"
-                ><img src="./img/filter-logo15.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="mobile app">
-              <a data-fancybox="gallery" href="./img/filter-logo16.png"
-                ><img src="./img/filter-logo16.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="web design">
-              <a data-fancybox="gallery" href="./img/filter-logo17.png"
-                ><img src="./img/filter-logo17.png"
-              /></a>
-            </div>
-            <div class="tabs__card active" data-category="mobile app">
-              <a data-fancybox="gallery" href="./img/filter-logo18.png"
-                ><img src="./img/filter-logo18.png"
-              /></a>
-            </div>
-          </div>
-          <div class="filter__more_files">
-            <label for="file" class="filter__more">load more</label>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="plan">
-      <div class="container">
-        <div class="plan__title">
-          <h6>Get Idea About</h6>
-          <h2>Pricing plan</h2>
-        </div>
-        <div class="plan__items">
-          <div class="plan__item">
-            <div class="plan__content">
-              <img src="./img/section11-logo2.png" alt="book" />
-              <h5>Student</h5>
-              <div class="plan__prices">
-                <div class="plan__znak"><p>$</p></div>
-                <div class="plan__price">
-                  <p class="plan__number">39</p>
-                  <p class="plan__date">/mo</p>
-                </div>
-              </div>
-              <p>6 GB storage</p>
-              <p>Fast Brandwidht</p>
-              <p class="plan__inseptTxt">Responsive</p>
-              <p class="plan__inseptTxt">Customization</p>
-            </div>
-            <a href="##" class="plan__btn">Sign up</a>
-          </div>
-          <div class="plan__item">
-            <div class="plan__content">
-              <img src="./img/section11-logo3.png" alt="box" />
-              <h5>Professional</h5>
-              <div class="plan__prices">
-                <div class="plan__znak"><p>$</p></div>
-                <div class="plan__price">
-                  <p class="plan__number">59</p>
-                  <p class="plan__date">/mo</p>
-                </div>
-              </div>
-              <p>6 GB storage</p>
-              <p>Fast Brandwidht</p>
-              <p>Responsive</p>
-              <p class="plan__inseptTxt">Customization</p>
-            </div>
-            <a href="#" class="plan__btn">Sign up</a>
-          </div>
-          <div class="plan__item">
-            <div class="plan__content">
-              <img src="./img/section11-logo4.png" alt="package" />
-              <h5>Unlimited</h5>
-              <div class="plan__prices">
-                <div class="plan__znak"><p>$</p></div>
-                <div class="plan__price">
-                  <p class="plan__number">99</p>
-                  <p class="plan__date">/mo</p>
-                </div>
-              </div>
-              <p>6 GB storage</p>
-              <p>Fast Brandwidht</p>
-              <p>Responsive</p>
-              <p>Customization</p>
-            </div>
-            <a href="##" class="plan__btn">Sign up</a>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="subskribe">
-      <div class="container">
-        <div class="subskribe__title">
-          <h6>For latest newsletter</h6>
-          <h2>Subscribe now</h2>
-        </div>
-        <div class="subskribe__content row">
-          <form
-            action="#"
-            class="subskribe__form col-sm-8 offset-sm-2 col-lg-6 offset-lg-3"
-          >
-            <input
-              class="subskribe__input"
-              type="text"
-              name="name"
-              placeholder="Your Name"
-            />
-            <input
-              class="subskribe__input"
-              type="email"
-              name="email"
-              placeholder="Example@gmail.com"
-            />
-            <a class="subskribe__btn" href="##">subscribe</a>
-          </form>
-        </div>
-      </div>
-    </section>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer__items">
-          <div class="footer__title">
-            <div class="footer__logo">
-              <img src="./img/footer-logo.png" alt="Mogo" />
-            </div>
-            <p class="footer__text">
-              Flaby is a free flat template and available for free downloads but
-              please don’t use for sell
-            </p>
-            <div class="footer__icons">
-              <a
-                href="https://www.facebook.com"
-                target="_blank"
-                class="footer__icon footer__icon_facebook"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                href="https://google.com/"
-                target="_blank"
-                class="footer__icon footer__icon_google"
-                ><i class="fab fa-google-plus-g"></i
-              ></a>
-              <a
-                href="https://twitter.com/"
-                target="_blank"
-                class="footer__icon footer__icon_twitter"
-                ><i class="fab fa-twitter"></i
-              ></a>
-            </div>
-          </div>
-          <div class="footer__item">
-            <h6>Useful Link</h6>
-            <a href="#">Resoirce</a><br />
-            <a href="#">Downloads</a><br />
-            <a href="#">Graphics</a><br />
-            <a href="#">Tempates</a><br />
-            <a href="#">UI colors</a>
-          </div>
-          <div class="footer__item">
-            <h6>Free Goods</h6>
-            <a href="#">Movies</a><br />
-            <a href="#">Music</a><br />
-            <a href="#">Video</a><br />
-            <a href="#">Games</a><br />
-            <a href="#">Application</a>
-          </div>
-          <div class="footer__item">
-            <h6>Elements</h6>
-            <a href="#">Ul Elements</a><br />
-            <a href="#">Materials</a><br />
-            <a href="#">Flat Ul</a><br />
-            <a href="#">Print File</a><br />
-            <a href="#">Flyer</a>
-          </div>
-          <div class="footer__item">
-            <h6>About Us</h6>
-            <a href="#">Home</a><br />
-            <a href="#">Portfolio</a><br />
-            <a href="#">Layout</a><br />
-            <a href="#">Blog</a><br />
-            <a href="#">Contact Us</a>
-          </div>
-        </div>
-        <div class="footer__copyright">
-          <p>&copy; Copyright 2020</p>
-          <p>All rights reserved</p>
-          <p>Template Designed By Sourabh Barua</p>
-        </div>
-      </div>
-    </footer> -->
     <script src="./jquery-3.5.0.js"></script>
     <script src="./libs/owl.carousel.min.js"></script>
     <script src="./src/index.js"></script>
