--- a/index.html
+++ b/index.html
@@ -914,6 +914,9 @@
         <div class="footer__date">
           <p class="footer__date__MoGo">©<span id="date">2020</span>MoGo</p>
         </div>
+        <div class="footer__btn">
+          <a class="btn__top"><i class="fas fa-chevron-up"></i></a>
+        </div>
       </div>
     </footer>
     <script src="./jquery-3.5.0.js"></script>
