--- a/index.html
+++ b/index.html
@@ -788,10 +788,23 @@
       </div>
     </section>
     <section class="map">
-      <div class="map__items">
+      <div class="map__logo">
         <i class="fas fa-map-marker-alt"></i>
         <h3>Open map</h3>
       </div>
+      <div class="map__items">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13868.965854249342!2d-76.15722466671278!3d43.050037979330845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f3b8019f2991%3A0x58d5929e21a62e5!2sDinosaur%20Bar-B-Que!5e0!3m2!1sru!2sua!4v1589829102623!5m2!1sru!2sua"
+          width="100%"
+          height="285"
+          frameborder="0"
+          style="border:0;"
+          allowfullscreen=""
+          aria-hidden="false"
+          tabindex="0"
+        ></iframe>
+      </div>
+      <i id="close" class="fas fa-window-close"></i>
     </section>
     <footer class="footer">
       <div class="container">
@@ -827,7 +840,7 @@
               <div class="footer__blogs__logo">
                 <img src="./img/footer-logo1.png" alt="MoGo_blogs" />
               </div>
-              <div>
+              <div class="footer__blogs__items">
                 <p class="footer__blogs__title">
                   Lorem ipsum dolor sit amet, consectetur adipiscing
                 </p>
@@ -840,7 +853,7 @@
               <div class="footer__blogs__logo">
                 <img src="./img/footer-logo2.png" alt="MoGo_blogs" />
               </div>
-              <div>
+              <div class="footer__blogs__items">
                 <p class="footer__blogs__title">
                   Consectetur adipiscing elit, sed do eiusmod tempor
                 </p>
@@ -853,7 +866,7 @@
               <div class="footer__blogs__logo">
                 <img src="./img/footer-logo3.png" alt="MoGo_blogs" />
               </div>
-              <div>
+              <div class="footer__blogs__items">
                 <p class="footer__blogs__title">
                   sed do eiusmod tempor incididunt ut labore
                 </p>
