--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Creative Template</title>
+    <title>MoGo</title>
+    <link rel="shortcut icon" href="./img/footer-logo.ico" />
     <link rel="stylesheet" href="./libs/owl.carousel.min.css" />
     <link rel="stylesheet" href="./libs/owl.theme.default.min.css" />
     <link
@@ -804,7 +805,7 @@
           tabindex="0"
         ></iframe>
       </div>
-      <i id="close" class="fas fa-window-close"></i>
+      <i class="fas fa-window-close map__close"></i>
     </section>
     <footer class="footer">
       <div class="container">
